projects/web-forms/css/form.css
/* ... */
.payment h1 {
	display: inline-block;
}
.payment span {
	float: right;
	font-size: 0.75em;
}

.payment-form span {
	margin-bottom: 0.25em;
}
.payment span a {
	color: #616161;
}
.payment-secure {
	position: absolute;
	width: 100%;
	top: 0;
	left: 0;
	padding: 2%;
	background-color: #FF7043;
	color: #FFFFFF;
	text-align: center;
	box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
}
.payment-header {
	padding: 1.5%;
	margin-bottom: 0.75em;
	border-bottom: 1px dotted #e0e0e0;
}
.payment-header:after {
	content: "";
	display: block;
	clear: both;
}
.payment-form:after {
	content: "";
	display: block;
	clear: both;
}
.payment-form .col2,
.payment-form .col3,
.payment-form .col4,
.payment-form .col5,
.payment-form .col6,
.payment-form .col7,
.payment-form .col8,
.payment-form .col9,
.payment-form .col10,
.payment-form .col11,
.payment-form .col12 {
	padding: 1.5%;
}
.payment-form img {
	opacity: 0.8;
}
.payment-form input,
.payment-form button {
	display: block;
	width: 100%;
}
.payment-form label {
	display: inline-block;
}
.payment-form label:after {
	content: "";
	display: block;
	clear: both;
}
.payment-form input[type="email"],
.payment-form input[type="text"],
.payment-form input[type="date"],
.payment-form input[type="time"],
.payment-form select,
.payment-form textarea {
	width: 100%;
	height: 2.5rem;
	padding: 0.3125rem;
	margin-top: 0.3125rem;
	
	font-size: 1.25rem;
	color: rgba(0,0,0,0.6);
	border: 1px solid #E0E0E0;
	border-radius: 3px;
}
.payment-form input[type="email"]:focus,
.payment-form input[type="text"]:focus,
.payment-form input[type="date"]:focus,
.payment-form input[type="time"]:focus,
.payment-form select:focus,
.payment-form textarea:focus {
	border: 3px solid #E0E0E0;
}
.payment-form p.label {
	background-color: #e0e0e0;
	color: #999999;
	text-align: center;
	padding: 2% 0;
}
.visa-img, .cvv {
	margin-top: 0.3125em;
}
/** Payment Form */
.error {
	display: none;
	width: 100%;
	padding: 0;
	background-color: #FF0000;
	color: #FFFFFF;
	font-size: 1rem;
	transition: 0.3s;
}

.error.active {
	padding: 0.625rem;
	margin-bottom: 0.625rem;
	display: block;
}
/*.active:before {
	content: "";
	clear: both;
	display: block;
}*/
.invalid,
input[type="text"].invalid,
input[type="date"].invalid,
input[type="time"].invalid,
input[type="email"].invalid,
input[type="password"].invalid,
input[type="search"].invalid,
select.invalid,
textarea.invalid {
	border: 1px solid #FF0000;
}

@media (max-width: 360px) {
  .appointment-header h1 {
    font-size: 1.875rem;
  }
  .login-header span,
  .signup-header span {
    padding-top: 1rem;
  }

  .questionnaire-form input[type="text"] {
    width: 100%;
  }

  .questionnaire-form button {
      width: 100%;
  }

  .options label {
    font-size: 1rem;
  }
}

@media (max-width: 360px), (max-width: 600px) {
	.container {
	  width: 100%;
	}

	.login,
  .signup,
  .search,
  .color-builder,
  .payment,
  .questionnaire {
		width: 100%;
    padding: 1em;
	}
  .login-header h1,
  .signup-header h1 {
    margin-bottom: 0;
  }

  .appointment-header h1 {
    font-size: 2rem;
  }

  .appointment-form .col6,
  .appointment-form .col4,
  .payment-form .col3.col3-xs {
    display: block;
    width: 100%;
  }
  
  .payment {
    padding: 4.5rem 1rem 2.5rem;
  }
  .payment-form {
    margin-top: 2.25rem;
  }

  .payment-form .col3-xs:last-child > label {
    display: none;
  }

  .payment-form p {
    margin-top: 2.25rem;
  }
}

@media (max-width: 1024px) {

	.container {
		width: 70%;
		margin: 0 auto;
	}
  .login,
  .signup,
  .search,
  .color-builder,
  .payment,
  .questionnaire {
    width: 80%;
  }
  /*.appointment {
    width: 90%;
  }*/
}

